--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,36 @@ table, th, td{
     font-size: 12px;
     color: red;
 }
+
+.house{
+    display: grid;
+    margin: 50px;
+    background-color: gainsboro;
+    grid-template-columns: 40% 50% 10%;
+    
+}
+#spacing{
+    
+    margin: 20px;
+}
+.forms{
+    width: 320px;
+    padding: 30px;
+    margin: 50px;
+}
+#inputs{
+    width: 100%;
+    margin: 10px;
+}
+textarea{
+    width: 100%;
+    margin: 10px;
+}
+.contacts{
+    display: block;
+}
+#media{
+    width: 50%;
+    margin: 30px;
+}
+
