--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,9 @@ nav>ul>li:hover{
     font-size: 20px;
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
-}
-h3{
+} */
+
+/* h3{
     text-transform: uppercase;
     
     display: inline-table;
@@ -89,9 +90,8 @@ img{
     height: 30%;
     margin: 1.6667%;
 } */
-/* #ww:before{
-    content: "temesgen/gallery";
-} */
+
+
 body{
     margin: 0px;
     padding: 0px;
@@ -105,7 +105,7 @@ body{
     margin-right: 15px;
     border-radius: 150px;
 }
-.horizontal{
+#horizontal{
     border-bottom-style: groove;
 }
 .space{
@@ -113,7 +113,8 @@ body{
 }
 table, th, td{
     border: 1px solid black;
-    margin: 10px;
+    margin: 30px;
+    padding: 5px;
 }
 .navigation{
     position: relative;
@@ -157,6 +158,17 @@ table, th, td{
     font-weight: 700;
     font-size: 12px;
     color: red;
+}
+.flex-container{
+    display: flex;
+    display: -webkit-flex;
+    width: 100%;
+    height: 80%;
+}
+.flex-item{
+    width: 50%px;
+    height: 30%;
+    margin: 10px;
 }
 
 .house{
