--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,21 @@
-/* *{
-    padding: 0;
-    margin: 0;
-} */
-/* body{
-    background-color: skyblue;
-    border: solid 10px lightgray;
-    margin: 10px;
-} */
-/* header{
-    background-color: rgba(119,90,90,0.6);
-    position: fixed;
-    top: 0;
-    width: 100%;
-} 
-article{
-    line-height: 25px;
-    font-size: 15px;
-    text-align: justify;
-} */
-/* .title{
-    font-size: 23px;
-    font-weight: bold;
-}
-.date{
-    font-style: italic;
-    font-size: 15px;
-    text-transform: capitalize;
-} */
-/* section{
-    border:solid 1px;
-    padding: 5px 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 100px;
-} */
-/* changing the nature */
-/* nav > ul >li{
-    display: inline-block;
-    padding: 10px 3px;
-    font-size: 20px;
-}
-nav>ul>li>a{
-    text-decoration: none;
-}
-nav>ul>li:hover{
-    background-color: #ffffff;
-} */
-/* img{
-    width: 400px;
-    height: 400px;
-    border-radius: 100%;
-    float: left;
-    margin-right: 10px;
-}
-#clear{
-    clear: left;
-} */
-/* body{
-    font-size: 20px;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-} */
 
-/* h3{
+body{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: lightgreen;
+}
+#H3{
     text-transform: uppercase;
-    
     display: inline-table;
-    margin-left: 600px;
+    margin-left: 400px;
     margin-right: 400px;
     border-bottom-style: solid;
     padding-bottom: 10px 3px;
 }
-
+.mar{
+    padding-left: 10px;
+}
 #pic{
     background-color: white;
     display: inline-table;
@@ -89,13 +34,12 @@ img{
     width: 30%;
     height: 30%;
     margin: 1.6667%;
-} */
+}
 
-
-body{
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+@media screen and (max-width: 1500px){
+    body{
+        background-color: ivory;
+    }
 }
 
 #png{
@@ -112,9 +56,15 @@ body{
     float: left;
 }
 table, th, td{
+    width: 500px;
     border: 1px solid black;
     margin: 30px;
     padding: 5px;
+}
+@media screen and (min-width: 1500px){
+    table, th, td{
+        background-color: gainsboro;
+    }
 }
 .navigation{
     position: relative;
@@ -124,6 +74,7 @@ table, th, td{
     box-sizing: border-box;
     background-color: thistle;
 }
+
 .menu{
     float: right;
 }
@@ -166,7 +117,7 @@ table, th, td{
     height: 80%;
 }
 .flex-item{
-    width: 50%px;
+    width: 50%;
     height: 30%;
     margin: 10px;
 }
