I have added footer on each page.

--- a/css/question2.css
+++ b/css/question2.css
@@ -4,6 +4,7 @@
     grid-template-columns: auto auto auto;
     background-color: white;
     margin-top: 70px;
+    margin-bottom: 70px;
     margin-left: 350px;
     margin-right: 350px;
 }
