--- a/css/question3.css
+++ b/css/question3.css
@@ -6,12 +6,12 @@
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 30px;
+    margin-bottom: 40px;
 }
 .part{
     background-color: white;
     border: 1px solid;
     margin: 10px;
-    position: relative;
   }
 #a{
     background-color: red;
@@ -113,11 +113,4 @@
 #pic3{
     width: 150px;
     height: 150px;
-
-}
-#circle{
-    border: 1px solid red;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
 }
