--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,8 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif; 
-    background-image: url("https://cdn.pixabay.com/photo/2015/12/03/08/50/paper-1074131__340.jpg");
+    background-image: url(/images/paper2.webp);
     background-size: cover;
-    /* background-image: url(/images/aa.jpg); */
     background-attachment: fixed;
 }
 #H3{
@@ -16,21 +15,21 @@ body{
     border-bottom-style: solid;
     padding-bottom: 10px 3px;
 }
-.mar{
-    padding-left: 10px;
-}
+
 img{
     float: left;
     width: 30%;
     height: 30%;
     margin: 1.6667%;
 }
+.clear{
+    clear: both;
+}
 @media screen and (max-width: 1500px){
     body{
         background-color: beige;
     }
 }
-
 #png{
     width: 180px;
     height: 175px;
@@ -40,6 +39,10 @@ img{
 }
 #horizontal{
     border-bottom-style: groove;
+}
+#line{
+    border-bottom-style: groove;
+    background-image: url(/images/sand1.jpg);
 }
 .space{
     float: left;
@@ -107,6 +110,7 @@ table, th, td{
     display: -webkit-flex;
     width: 100%;
     height: 80%;
+    background-image: url("");
 }
 .flex-item{
     width: 50%;
@@ -183,18 +187,16 @@ textarea{
 #bg{
     background: url(/images/aa.jpg) repeat;
     border: 2px solid black;
-    border-radius: 80%;
-    margin-left: 200px;
-    margin-right: 200px;
-    padding: 30px;
+    border-radius: 200px;
+    margin-top: 5em;
+    margin-bottom: 5em;
+    padding: 10px;
 }
 #og{
-    background: url(/images/ethio.jpg) repeat;
-    border: 2px solid black;
-    margin-left: 70px;
-    padding: 5px;
-    width: 90%;
-
+    background: url(/images/text1.jfif) repeat;
+    margin-top: 5em;
+    margin-bottom: 5em;
+   
 }
 #opacity{
     margin: 30px;
@@ -209,10 +211,8 @@ textarea{
     filter: alpha(opacity=100);
 }
 #opacity p{
-    margin-left: 120px;
     font-size: 60px;
     font-weight: 700;
-    color: black;
 }
 .answer{
     border: 1px solid black;
@@ -238,4 +238,16 @@ textarea{
     color: white;
     font-size: 1rem;
     font-style: italic;
+}
+footer{
+    border: 1px solid black;
+    text-align: center;
+    background-color: whitesmoke;
+}
+footer a{
+    color: mediumblue;
+    text-decoration: none;
+}
+footer a:hover{
+    background-color: silver;
 }
