New: I have changed the background image/color of question 4, 5, and 6 answer border.

--- a/css/question1.css
+++ b/css/question1.css
@@ -3,7 +3,7 @@ DO NOT ALTER THE EXISTING HTML TO DO THIS.  WRITE ONLY CSS!
 
 /* Give the <body> element a background of #bdc3c7*/
 body{
-    color: #bdc3c7;
+   background-color : #bdc3c7;
 }
 
 /* Make the <h1> element #9b59b6*/
@@ -62,7 +62,7 @@ div:nth-of-type(3)>p:nth-of-type(2){
 }
 
 /* Make the <em> in the 3rd <div> element white and 20px font(font-size:20px)*/
-div em{
+div:nth-of-type(3) em{
     color: white;
     font-size: 20px;
 }
@@ -82,7 +82,7 @@ label{
 }
 
 /*Make the first letter of the element with id 'special' green and 100px font size(font-size: 100)*/
-p + #special::first-letter{
+#special::first-letter{
     color: green;
     font-size: 100px;
 }
