--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ table, th, td{
     margin: 20px 30px;
     box-sizing: border-box;
     background-color: white;
+
 }
 
 .menu{
@@ -110,7 +111,7 @@ table, th, td{
     display: -webkit-flex;
     width: 100%;
     height: 80%;
-    background-image: url("");
+    background-image: url(/images/text2.jfif);
 }
 .flex-item{
     width: 50%;
@@ -170,7 +171,7 @@ textarea{
 
 #l #j{
     display: block;
-	color:white;
+	color: saddlebrown;
 	text-align: center;
     padding: 50px 16px;
     font-size: 30px;
@@ -216,8 +217,7 @@ textarea{
 }
 .answer{
     border: 1px solid black;
-    margin: 5em 25em;
-    background-color: tan;
+    margin: 5em 20em;
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -229,16 +229,30 @@ textarea{
     font-style: italic;
 }
 #head{
-    color: orangered;
+    color:  ;
     text-align: center;
-    font-style: italic;
+    font-style: normal;
     font-size: 2rem;
 }
 #date{
     color: white;
     font-size: 1rem;
     font-style: italic;
+    margin-left: 80%;
 }
+#content1{
+    background-image: url(/images/paper.jpg);
+}
+#content2{
+    background-image: url(/images/text3.jfif);
+}
+#content3{
+    background-image: url(/images/text2.jfif);
+}
+/* #inlineDisplay{
+    display: flex;
+
+} */
 footer{
     border: 1px solid black;
     text-align: center;
