I incorporate ongoing reference links in blog page.

--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,16 @@ footer a{
 footer a:hover{
     background-color: silver;
 }
+#source{
+    display: flex;
+}
+#source p{
+    color: red;
+}
+#source a{
+    color: blue;
+    text-decoration: none;
+}
+#source a:hover{
+    background-color: ivory;
+}
